# Ai-agent

./: .gitignore  agent.py  get_zeidans_info.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_z-bot.yml  master_z-bot.yml
agent/: agent.py
agentTools/: ToolsList.py  zeidans_information_array.py
agentrunner/: agentRun.py
api/: api.py
fastapi/: agent.py  main.py
imports/: __init__.py  imports.py
