[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[google-genai]>=1.0.7",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "fastapi>=0.121.2",
    "uvicorn==0.34.0",
    "sentence-transformers>=5.1.2",
    "langchain-chroma>=1.0.0",
    "ollama>=0.6.1",
    "langchain-ollama>=1.0.0",
    "gunicorn>=23.0.0",
]
